made changes to the layout

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href=""> -->
 </head>
 
 <body>
     <header>
-        <p>MiHealth</p>
+        <div id="logo"><h1>Mi</h1><h2>Health</h2></div>
         <nav>
             <a href="#">Breakfast</a>
             <a href="#">Lunch</a>
@@ -23,20 +22,24 @@
     </header>
     <div class="mainContent">
         <div id="beHealthy" class="content">
-            <h1>Be Healthy</h1>
+            <h3>Be Healthy</h3>
             <p>Aliquam amet arcu bibendum cum dapibus egestas facilisis fames luctus orci primis sapien senectus. Ad consequat enim erat hac iaculis laoreet litora malesuada mattis molestie natoque nec nostra odio porttitor quis sollicitudin tempor turpis vestibulum viverra volutpat.</p>
             <div id="menuLink" class="content">
-                <h2>Browse Menu<img id="arrow" src="images/arrow.png"></h2>
-                <!-- <img id="arrow" src="images/arrow.png"> -->
+                <h4>Browse Menu<img id="arrow" src="images/arrow.png"></h4>
             </div>
         </div>
-        <div class="image">
-            <!-- <img src="images/apple-breakfast-quinoa-7.jpeg"> -->
-            <div id="whiteTag">Fresh</div>
-            <div id="greenTag">Breakfast</div>
+        <div class="image" id="breakfast">
+            <div id="whiteTag"><h5>FRESH</h5></div>
+            <div id="greenTag"><h5>BREAKFAST</h5></div>
         </div>
-        <div ><img src="images/pasta-salad-recipe-for-lunch.jpeg"></div>
-        <div><img src="images/Shrimp.jpeg"></div> 
+        <div class="image" id="lunch">
+            <div id="whiteTag"><h5>SWEET</h5></div>
+            <div id="greenTag"><h5>LUNCH</h5></div>
+        </div>
+        <div class="image" id="dinner">
+            <div id="whiteTag"><h5>DELICIOUS</h5></div>
+            <div id="greenTag"><h5>DINNER</h5></div>
+        </div> 
     </div>
 
 </body>
