added correct spacing between images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="beHealthy" class="content">
             <h3>Be Healthy</h3>
             <p>Aliquam amet arcu bibendum cum dapibus egestas facilisis fames luctus orci primis sapien senectus. Ad consequat enim erat hac iaculis laoreet litora malesuada mattis molestie natoque nec nostra odio porttitor quis sollicitudin tempor turpis vestibulum viverra volutpat.</p>
-            <div id="menuLink" class="content">
+            <div id="menuLink">
                 <h4>Browse Menu<img id="arrow" src="images/arrow.png"></h4>
             </div>
         </div>
