--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div id="logo"><h1>Mi</h1><h2>Health</h2></div>
+        <div id="logo"><h1>MI</h1><h2>HEALTH</h2></div>
         <nav>
             <a href="#">Breakfast</a>
             <a href="#">Lunch</a>
